// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components GbInvestment Call "addInvestor" 1`] = `
Array [
  Object {
    "isPotentialSniper": true,
    "value": 1,
  },
]
`;

exports[`Components GbInvestment Call "addInvestor" with big value 1`] = `
Array [
  Object {
    "isPotentialSniper": true,
    "value": 326,
  },
]
`;

exports[`Components GbInvestment Call "calculate" with maxInvestment < 0 1`] = `
Object {
  "cost": 1210,
  "investment": Array [
    Object {
      "cumulativeInvestment": 1110,
      "defaultParticipationIndex": 0,
      "expectedParticipation": 238,
      "isInvestorParticipation": true,
      "participation": 500,
      "preparation": 500,
      "reward": 125,
      "roi": -262,
      "snipe": Object {
        "fp": -1,
        "roi": 0,
      },
    },
    Object {
      "cumulativeInvestment": 1120,
      "defaultParticipationIndex": 1,
      "expectedParticipation": 124,
      "isInvestorParticipation": true,
      "participation": 100,
      "preparation": 510,
      "reward": 65,
      "roi": 24,
      "snipe": Object {
        "fp": 105,
        "roi": 19,
      },
    },
    Object {
      "cumulativeInvestment": 1182,
      "defaultParticipationIndex": -1,
      "expectedParticipation": 38,
      "isInvestorParticipation": false,
      "participation": 38,
      "preparation": 534,
      "reward": 20,
      "roi": 0,
      "snipe": Object {
        "fp": 55,
        "roi": -17,
      },
    },
    Object {
      "cumulativeInvestment": 1200,
      "defaultParticipationIndex": 2,
      "expectedParticipation": 10,
      "isInvestorParticipation": true,
      "participation": 10,
      "preparation": 552,
      "reward": 5,
      "roi": 0,
      "snipe": Object {
        "fp": 55,
        "roi": -45,
      },
    },
    Object {
      "defaultParticipationIndex": -1,
      "expectedParticipation": 0,
      "isInvestorParticipation": false,
      "preparation": 562,
      "reward": 0,
      "roi": 0,
      "snipe": Object {
        "fp": 0,
        "roi": 0,
      },
    },
  ],
  "level": 10,
  "otherInvestment": Array [],
  "totalPreparations": 562,
}
`;

exports[`Components GbInvestment Call "changePlaceFree" with invalid data 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call "removeInvestor" with invalid index 1`] = `
Array [
  Object {
    "isPotentialSniper": true,
    "value": 326,
  },
  Object {
    "isPotentialSniper": true,
    "value": 5,
  },
]
`;

exports[`Components GbInvestment Call "removeInvestor" with invalid index 2`] = `
Array [
  Object {
    "isPotentialSniper": true,
    "value": 326,
  },
  Object {
    "isPotentialSniper": true,
    "value": 5,
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' 'templateToAdd' not set 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' 'templateToAdd' not set 2`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' 2`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Custom 1",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' 3`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Custom 1",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' with unknown template 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'addPromotionMessageTemplate' with unknown template 2`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'removePromotionMessage' 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Call 'removePromotionMessage' 2`] = `
Array [
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Change "lang" value 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatoire 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatoire 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatoire 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatoire 1
My pseudo - Observatoire 2
My pseudo - Observatoire 3
My pseudo - Observatoire 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatoire 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Change "result" value 1`] = `
Object {
  "promotion": Array [
    Object {
      "active": false,
      "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
      "name": "Default 0",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
      "name": "Default 1",
    },
    Object {
      "active": false,
      "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
      "name": "Default 2",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
      "name": "Default 3",
    },
    Object {
      "active": false,
      "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
      "name": "Default 4",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 1 2 3 4",
      "name": "Default 5",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 4 3 2 1",
      "name": "Default 6",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 1,2,3,4",
      "name": "Default 7",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 4,3,2,1",
      "name": "Default 8",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 4,3,2,1",
      "name": "Default 9",
    },
    Object {
      "active": false,
      "message": "Observatory 9 → 10 4,3,2,1",
      "name": "Default 10",
    },
    Object {
      "active": false,
      "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
      "name": "Default 11",
    },
    Object {
      "active": false,
      "message": "Observatory 9 < 4,3,2,1 > 10",
      "name": "Custom 11",
    },
  ],
  "result": Object {
    "cost": 650,
    "investment": Array [
      Object {
        "cumulativeInvestment": 526,
        "defaultParticipationIndex": -1,
        "expectedParticipation": 124,
        "isInvestorParticipation": false,
        "participation": 124,
        "preparation": 402,
        "reward": 65,
        "roi": 0,
        "snipe": Object {
          "fp": 325,
          "roi": -201,
        },
      },
      Object {
        "cumulativeInvestment": 593,
        "defaultParticipationIndex": -1,
        "expectedParticipation": 67,
        "isInvestorParticipation": false,
        "participation": 67,
        "preparation": 402,
        "reward": 35,
        "roi": 0,
        "snipe": Object {
          "fp": 325,
          "roi": -258,
        },
      },
      Object {
        "cumulativeInvestment": 631,
        "defaultParticipationIndex": -1,
        "expectedParticipation": 19,
        "isInvestorParticipation": false,
        "participation": 19,
        "preparation": 421,
        "reward": 10,
        "roi": 0,
        "snipe": Object {
          "fp": 325,
          "roi": -306,
        },
      },
      Object {
        "cumulativeInvestment": 641,
        "defaultParticipationIndex": -1,
        "expectedParticipation": 10,
        "isInvestorParticipation": false,
        "participation": 10,
        "preparation": 421,
        "reward": 5,
        "roi": 0,
        "snipe": Object {
          "fp": 325,
          "roi": -315,
        },
      },
      Object {
        "defaultParticipationIndex": -1,
        "expectedParticipation": 0,
        "isInvestorParticipation": false,
        "preparation": 430,
        "reward": 0,
        "roi": 0,
        "snipe": Object {
          "fp": 0,
          "roi": 0,
        },
      },
    ],
    "level": 10,
    "otherInvestment": Array [],
    "totalPreparations": 430,
  },
}
`;

exports[`Components GbInvestment Change "showOnlySecuredPlaces" value 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components GbInvestment Change "showOnlySecuredPlaces" value and revert 1`] = `
Array [
  Object {
    "active": false,
    "message": "Observatory 4 (10)  3 (19)  2 (67)  1 (124)",
    "name": "Default 0",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P1(124) P2(67) P3(19) P4(10)",
    "name": "Default 1",
  },
  Object {
    "active": false,
    "message": "P1(124) P2(67) P3(19) P4(10) Observatory 9 → 10",
    "name": "Default 2",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 P4(10) P3(19) P2(67) P1(124)",
    "name": "Default 3",
  },
  Object {
    "active": false,
    "message": "P4(10) P3(19) P2(67) P1(124) Observatory 9 → 10",
    "name": "Default 4",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1 2 3 4",
    "name": "Default 5",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4 3 2 1",
    "name": "Default 6",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 1,2,3,4",
    "name": "Default 7",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 8",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 9",
  },
  Object {
    "active": false,
    "message": "Observatory 9 → 10 4,3,2,1",
    "name": "Default 10",
  },
  Object {
    "active": false,
    "message": "My pseudo - Observatory 1
My pseudo - Observatory 2
My pseudo - Observatory 3
My pseudo - Observatory 4",
    "name": "Default 11",
  },
  Object {
    "active": false,
    "message": "Observatory 9 < 4,3,2,1 > 10",
    "name": "Custom 11",
  },
]
`;

exports[`Components SimpleTrade Check result with current age ContemporaryEra for value 100 and split 100 1`] = `
Object {
  "ArcticFuture": Object {
    "ratio": 0.62,
    "show": true,
    "split": "1 × (100 CE for 62 AF) and 1 × (62 CE for 38 AF)",
    "value": "62",
  },
  "BronzeAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ColonialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ContemporaryEra": Object {
    "ratio": 1,
    "show": true,
    "split": "1 × (100 CE for 100 CE)",
    "value": "100",
  },
  "EarlyMiddleAges": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "HighMiddleAges": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "IndustrialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "IronAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "LateMiddleAges": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ModernEra": Object {
    "ratio": 1.5,
    "show": true,
    "split": "1 × (67 CE for 100 ME)",
    "value": "150",
  },
  "OceanicFuture": Object {
    "ratio": 0.56,
    "show": true,
    "split": "1 × (100 CE for 56 OF) and 1 × (79 CE for 44 OF)",
    "value": "56",
  },
  "PostmodernEra": Object {
    "ratio": 1.2,
    "show": true,
    "split": "1 × (84 CE for 100 PME)",
    "value": "120",
  },
  "ProgressiveEra": Object {
    "ratio": 1.8,
    "show": true,
    "split": "1 × (56 CE for 100 PE)",
    "value": "180",
  },
  "SpaceAgeMars": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "TheFuture": Object {
    "ratio": 0.72,
    "show": true,
    "split": "1 × (100 CE for 72 TF) and 1 × (39 CE for 28 TF)",
    "value": "72",
  },
  "Tomorrow": Object {
    "ratio": 0.86,
    "show": true,
    "split": "1 × (100 CE for 86 TE) and 1 × (16 CE for 14 TE)",
    "value": "86",
  },
  "VirtualFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
}
`;

exports[`Components SimpleTrade Check result with current age HighMiddleAges for value 427 and split 100 1`] = `
Object {
  "ArcticFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "BronzeAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ColonialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ContemporaryEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "EarlyMiddleAges": Object {
    "ratio": 2,
    "show": true,
    "split": "4 × (50 HMA for 100 EMA) and 1 × (14 HMA for 27 EMA)",
    "value": "854",
  },
  "HighMiddleAges": Object {
    "ratio": 1,
    "show": true,
    "split": "4 × (100 HMA for 100 HMA) and 1 × (27 HMA for 27 HMA)",
    "value": "427",
  },
  "IndustrialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "IronAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "LateMiddleAges": Object {
    "ratio": 0.5,
    "show": true,
    "split": "8 × (100 HMA for 50 LMA) and 1 × (54 HMA for 27 LMA)",
    "value": "214",
  },
  "ModernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "OceanicFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "PostmodernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ProgressiveEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "SpaceAgeMars": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "TheFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "Tomorrow": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "VirtualFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
}
`;

exports[`Components SimpleTrade Check result with current age HighMiddleAges for value 500 and split 1000 1`] = `
Object {
  "ArcticFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "BronzeAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ColonialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ContemporaryEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "EarlyMiddleAges": Object {
    "ratio": 2,
    "show": true,
    "split": 1000,
    "value": "1,000",
  },
  "HighMiddleAges": Object {
    "ratio": 1,
    "show": true,
    "split": 500,
    "value": "500",
  },
  "IndustrialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "IronAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "LateMiddleAges": Object {
    "ratio": 0.5,
    "show": true,
    "split": 250,
    "value": "250",
  },
  "ModernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "OceanicFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "PostmodernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ProgressiveEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "SpaceAgeMars": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "TheFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "Tomorrow": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "VirtualFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
}
`;

exports[`Components SimpleTrade Check result with current age HighMiddleAges for value 12000 and split 1000 1`] = `
Object {
  "ArcticFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "BronzeAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ColonialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ContemporaryEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "EarlyMiddleAges": Object {
    "ratio": 2,
    "show": true,
    "split": 24000,
    "value": "24,000",
  },
  "HighMiddleAges": Object {
    "ratio": 1,
    "show": true,
    "split": 12000,
    "value": "12,000",
  },
  "IndustrialAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "IronAge": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "LateMiddleAges": Object {
    "ratio": 0.5,
    "show": true,
    "split": 6000,
    "value": "6,000",
  },
  "ModernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "OceanicFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "PostmodernEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "ProgressiveEra": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "SpaceAgeMars": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "TheFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "Tomorrow": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
  "VirtualFuture": Object {
    "ratio": 0,
    "show": false,
    "split": "",
    "value": 0,
  },
}
`;
